fix: reduce font sizes for improved readability and layout consistency

--- a/staticfiles/css/dashboard.css
+++ b/staticfiles/css/dashboard.css
@@ -248,7 +248,7 @@ a:hover {
   font-family: var(--text-font);
   color: var(--nav-links-color);
   letter-spacing: 1px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: normal;
   transition: all 0.4s ease-in-out;
 }
@@ -549,7 +549,7 @@ main {
 }
 #row_cards h1 {
   font-family: var(--header-font);
-  color: var(--text-color);
+  color: #b6a28e;
   letter-spacing: 1px;
   font-size: 3rem;
   margin-top: 14%;
@@ -738,7 +738,7 @@ main {
 
   /* top nav */
   #logo {
-    width: 40px;
+    max-width: 90%;
     height: auto;
     margin-top: 10%;
     margin-bottom: 10%;
@@ -761,15 +761,15 @@ main {
     align-items: center;
   }
   #dashboard h6 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
   #dashboard p {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin-top: 0.7rem;
     margin-bottom: 0;
   }
   #dashboard_card button {
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 5px 15px;
   }
   #create_img {
@@ -790,11 +790,11 @@ main {
     width: 22px;
   }
   #row_cards h5 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin-top: 2px;
   }
   #row_cards small {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     margin-top: 1px;
   }
   #div_pills {
@@ -802,17 +802,17 @@ main {
     justify-content: space-evenly;
   }
   #pill_img {
-    width: 22px;
+    width: 21px;
     margin-right: 13%;
   }
   #div_pills span {
-    font-size: 1.1rem;
-    padding: 3px 12px;
+    font-size: 1rem;
+    padding: 2px 11px;
   }
 
   /*  */
   #row_cards h4 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     margin-top: 2px;
   }
   #row_cards h4 span {
@@ -824,21 +824,21 @@ main {
     align-items: center;
   }
   #row_cards #icon_img {
-    width: 40px;
+    width: 37px;
     background: #eae4dd;
     padding: 1%;
   }
   #row_cards #default_img {
-    width: 50px;
+    width: 47px;
     margin-top: 20%;
     margin-bottom: 2%;
   }
   #row_cards a {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin-top: 0%;
   }
   #row_cards h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-top: 20%;
   }
   #dashboard #line_divider {
@@ -850,8 +850,8 @@ main {
 
   /* recent_uploads */
   #dashboard h3 {
-    font-size: 1.2rem;
-    margin-top: 10%;
+    font-size: 1rem;
+    margin-top: 8%;
     text-align: center;
     margin-bottom: 10px;
   }
@@ -862,31 +862,31 @@ main {
     margin-top: 1px;
   }
   #initials h4 {
-    font-size: 1.1rem;
+    font-size: 1rem;
     margin-bottom: 1%;
     margin-top: 2%;
   }
   #initials h4 span {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin-right: 3%;
     padding: 3%;
   }
-  #recent_uploads h5 {
-    font-size: 1.2rem;
-    margin-top: 5%;
-    text-align: center;
-  }
-  #recent_uploads h6 {
-    font-size: 1.1rem;
-    text-align: center;
-    margin-top: 5%;
-  }
+  /* #recent_uploads h5 { */
+  /* font-size: 1.2rem; */
+  /* margin-top: 5%; */
+  /* text-align: center; */
+  /* } */
+  /* #recent_uploads h6 { */
+  /* font-size: 1.1rem; */
+  /* text-align: center; */
+  /* margin-top: 5%; */
+  /* } */
   #recent_uploads a {
-    font-size: 1.2rem;
-    padding: 3px 12px;
+    font-size: 0.9rem;
+    padding: 2px 10px;
     margin-top: 1%;
-    margin-left: 13%;
-    margin-bottom: -5%;
+    margin-left: 10%;
+    margin-bottom: -9%;
   }
   #recent_uploads .col-md-3 {
     border-left: 1px solid #2b2d3c;
@@ -900,58 +900,59 @@ main {
     background-color: #222222;
   }
   #close_svg {
-    width: 7%;
-    height: 7%;
+    width: 6%;
+    height: 6%;
   }
   #marker_img {
     width: 6%;
     height: 6%;
   }
   #createVaultModal h1 {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     margin-bottom: 1%;
   }
   #createVaultModal h2 {
-    font-size: 1.6rem;
+    font-size: 1.1rem;
     margin-bottom: 1%;
   }
   #createVaultModal h4 {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin-bottom: 1%;
     margin-top: 5%;
   }
   #createVaultModal p {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     line-height: 1.2;
+    margin-bottom: 1%;
   }
   /*  */
   #createVaultModal .input {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
   #createVaultModal .input::placeholder {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
   }
   /*  */
   #createVaultModal label {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-top: 6%;
   }
   #createVaultModal small {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     letter-spacing: 1px;
   }
   /*  */
   #createVaultModal #button_ {
-    font-size: 1.3rem;
+    font-size: 1rem;
     padding: 5px 15px;
-    margin-top: 1.3%;
+    margin-top: 3%;
   }
   #createVaultModal h6 {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-top: 4%;
   }
   #createVaultModal li {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
